force-app/main/default/objects/vlocity_cmt__ConfigurationSnapshot__c/vlocity_cmt__ConfigurationSnapshot__c.object-meta.xml
<CustomObject>
    <description>Configuration Snapshot allows you to track/manage multiple versions of cacheable datasets linking to snapshot id with varying effectivity supporting zero downtime during cache generation for the APIs using cached datasets.</description>
    <label>Configuration Snapshot</label>
    <nameField>
        <label>Configuration Snapshot Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Snapshots</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>