force-app/main/default/objects/vlocity_cmt__ConfigurationSnapshot__c/fields/vlocity_cmt__ConfigurationSnapshotId__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__ConfigurationSnapshotId__c</fullName>
    <description>Auto generated number to represent the cached data set.</description>
    <displayFormat>{0000000000}</displayFormat>
    <externalId>true</externalId>
    <label>Configuration Snapshot Id</label>
    <type>AutoNumber</type>
</CustomField>