force-app/main/default/objects/vlocity_cmt__ConfigurationSnapshot__c/fields/vlocity_cmt__Status__c.field-meta.xml
<CustomField>
    <fullName>vlocity_cmt__Status__c</fullName>
    <description>Status of the configuration snapshot which helps us to track the status of cached/caching dataset with following states Processing(cache generation is in progress), Ready(cache generation is complete and available for activation), Active(generated cached dataset is active and available for APIs/Services to use them for run time computation), Expired(cache dataset linked to configuration is no longer effective) and Aborted(cache generation is aborted halfway either due to manual intervention/application error).</description>
    <label>Status</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ready</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Processing</fullName>
            </value>
            <value>
                <fullName>Expired</fullName>
            </value>
            <value>
                <fullName>Aborted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>